# inscope-scheduler

./: pyproject.toml
examples/: jax_demo.py  slurm_demo.py  slurm_submit_demo.py
src/inscope_scheduler/: __init__.py  backends.py  jax.py  lease.py  manager.py  probe.py  slurm_submit.py
tests/: test_jax_integration.py  test_lease_heartbeat.py  test_manager.py
