[project]
name = "inscope-scheduler"
version = "0.1.0"
description = "In-scope resource manager for ML training runs"
readme = "README.md"
authors = [
    { name = "Akhil Samavedam", email = "akhil.samavedam@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "filelock>=3.20.3",
    "psutil>=7.2.1",
    "pydantic>=2.12.5",
    "nvidia-ml-py>=13.0.1",
    "rich>=14.2.0",
    "sqlmodel>=0.0.31",
    "jax[cuda13]>=0.9.0",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]
